--- a/views/CreateAccountPage.hbs
+++ b/views/CreateAccountPage.hbs
@@ -15,10 +15,10 @@
       <input type="password" name="password" placeholder="Password" required>
       <input type="submit" value="Sign Up">
     </form>
-    <button onclick="" class="create-account-btn">Already Have an Account</button>
+    <button onclick="openAlreadyAccount()" class="create-account-btn">Already Have an Account</button>
   </div>
 </div>
 
 </body>
-<script src = "script.js"></script>
+<script src = "JS/CreateAccount.js"></script>
 </html>
