--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,12 +12,12 @@
   <h1 class="login-heading">RES-BUS</h1>
   <div class="login-form">
     
-    <form action="#" method="post">
+    <form action="/login" method="post">
       <input type="text" name="username" placeholder="Username" required>
       <input type="password" name="password" placeholder="Password" required>
       <input class="submitButton" type="submit" value="Login">
     </form>
-    <button  onclick="openCreateAccount()" class="create-account-btn">Create New Account</button>
+    <button onclick="openCreateAccount()"  class="create-account-btn">Create New Account</button>
   </div>
 </div>
 
